# ur

./: .env.example  .env.prod  Cargo.toml  Dockerfile  Dockerfile.cpanel-vps  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  ZOHO_CODE_CACHE_SYSTEM.md  build-for-cpanel.sh  dev-local.bat  dev-separate.sh  diesel.toml  docker-compose.yml  init.sql  install.sh  migrate.sh  migrate_to_postgresql.bat  migrate_to_postgresql.sh  run.sh  servidor-start.sh  setup-db.sql  start.sh  stop.sh
.github/workflows/: build.yml
migrations-docker/2025-01-27-205710_create_maps_svg/: trigger.sql  up.sql
migrations-docker/2025-01-29-062116_create_products/: up.sql
migrations-docker/2025-01-30-005950_add_timestamps_products/: down.sql
migrations-docker/2025-10-17-144511_create_zoho_code_table/: up.sql
migrations-docker/2025-10-20-200346_create_status_colors_table/: up.sql
migrations/2025-01-27-205710_create_maps_svg/: down.sql
migrations/2025-01-30-005950_add_timestamps_products/: up.sql
migrations/2025-10-17-144511_create_zoho_code_table/: down.sql
migrations/2025-10-20-200346_create_status_colors_table/: down.sql
src/: lib.rs  main.rs
src/auth/: auth_handler.rs  auth_service.rs  auth_service_trait.rs  mod.rs
src/common/: auth_middleware.rs  config.rs  errors.rs  mod.rs  swagger_config.rs  types.rs
src/db/: mod.rs  schema.rs
src/http/: mod.rs  zoho.rs
src/interactive_maps/: interactive_maps_handler.rs  interactive_maps_repository.rs  interactive_maps_service.rs  mod.rs
src/products/: mod.rs  products_repository.rs  products_service.rs
static/: index.html
(+29 files in other folders)
